# web-cycling

./: .gitignore  Cargo.toml  README.md  bird.blend  ble_devices.js  build.rs  build.sh  exported.json  index.html  index.js  terrain.blend  velodrome1.blend
src/: canvas.rs  lib.rs  load_texture_img.rs  macros.rs
src/app/: mod.rs
src/app/assets/: mod.rs
src/app/bluetooth/: hrm.rs  mod.rs
src/app/components/: hrm_display.rs  mod.rs  slidebox.rs
src/app/store/: camera.rs  mod.rs  timedata.rs
src/app/ui/: animation.rs  chart.rs  drag.rs  element.rs  fields.rs  geom.rs  messaging.rs  mod.rs  path.rs  picking.rs  render.rs  text.rs
src/render/: framebuffer.rs  mod.rs  render_meshes.rs  render_trait.rs  texture_unit.rs  textured_quad.rs
src/render/mesh/: non_skinned_mesh.rs  skinned_mesh.rs
src/shader/: mesh-no-texture-fragment.glsl  mesh-no-texture-vertex.glsl  mesh-non-skinned-fragment.glsl  mesh-non-skinned-vertex.glsl  mesh-skinned-fragment.glsl  mesh-skinned-vertex.glsl  mod.rs  textured-quad-fragment.glsl  textured-quad-vertex.glsl  ui-fragment-picking.glsl  ui-fragment.glsl  ui-vertex-picking.glsl  ui-vertex.glsl
